--- a/blockchain-signup-main/admin/admindashboard.html
+++ b/blockchain-signup-main/admin/admindashboard.html
@@ -10317,7 +10317,7 @@ console.log(userInfo)
     async function fetchUser() {
           const response = await $.ajax({
             type: "GET",
-            url: 'https://block-server.vercel.app/users',
+            url: 'https://boks-server.vercel.app/users',
             dataType: "json",
             timeout: 30000,
           });
