--- a/blockchain-signup-main/admin/userinfo.html
+++ b/blockchain-signup-main/admin/userinfo.html
@@ -1094,7 +1094,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `https://block-server.vercel.app/users/${parsedData}`,
+    url: `https://boks-server.vercel.app/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1126,7 +1126,7 @@ async function updateProfile({ firstName, lastName, email, balance,profit}) {
 
   const response = await $.ajax({
     type: "PUT",
-    url: `https://block-server.vercel.app/users/${currentUser._id}/profile/update`,
+    url: `https://boks-server.vercel.app/users/${currentUser._id}/profile/update`,
     dataType: "json",
     data: { firstName, lastName, email, balance,profit  },
     timeout: 30000,
