--- a/blockchain-signup-main/admin/activeusers.html
+++ b/blockchain-signup-main/admin/activeusers.html
@@ -9437,7 +9437,7 @@
 async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: 'https://block-server.vercel.app/users',
+        url: 'https://boks-server.vercel.app/users',
         dataType: "json",
         timeout: 30000,
       });
