--- a/blockchain-signup-main/admin/adminreferral.html
+++ b/blockchain-signup-main/admin/adminreferral.html
@@ -9461,7 +9461,7 @@
     
           const response = await $.ajax({
             type: "GET",
-            url: `https://block-server.vercel.app/users/${userFromLS.email}`,
+            url: `https://boks-server.vercel.app/users/${userFromLS.email}`,
             dataType: "json",
             timeout: 30000,
             success: async function (data) {
