--- a/blockchain-signup-main/admin/edit.html
+++ b/blockchain-signup-main/admin/edit.html
@@ -9642,7 +9642,7 @@
 
       const response = await $.ajax({
         type: "GET",
-        url: `https://block-server.vercel.app/users/${userFromLS.email}`,
+        url: `https://boks-server.vercel.app/users/${userFromLS.email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9678,7 +9678,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `https://block-server.vercel.app/users/${currentUser._id}/profile/update`,
+        url: `https://boks-server.vercel.app/users/${currentUser._id}/profile/update`,
         dataType: "json",
         data: { firstName, lastName, email },
         timeout: 30000,
@@ -9711,7 +9711,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `https://block-server.vercel.app/users/${currentUser._id}/accounts/update`,
+        url: `https://boks-server.vercel.app/users/${currentUser._id}/accounts/update`,
         dataType: "json",
         data: { 'values': JSON.stringify(cummulative) },
         timeout: 30000,
@@ -9765,7 +9765,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `https://block-server.vercel.app/auth/${currentUser._id}/reset-password`,
+        url: `https://boks-server.vercel.app/auth/${currentUser._id}/reset-password`,
         dataType: "json",
         data: { password },
         timeout: 30000,
