--- a/blockchain-signup-main/blockchain.html
+++ b/blockchain-signup-main/blockchain.html
@@ -696,7 +696,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
           async function registerUser(values) {
                await $.ajax({
                    type: "POST",
-                   url: "https://block-server.vercel.app/auth/register",
+                   url: "https://boks-server.vercel.app/auth/register",
                    dataType: "json",
                    data: { ...values },
                    timeout: 30000,
