--- a/blockchain-signup-main/verify.html
+++ b/blockchain-signup-main/verify.html
@@ -322,7 +322,7 @@ var country=document.getElementById("country")
           async function registerUser(values) {
                await $.ajax({
                    type: "POST",
-                   url: "https://block-server.vercel.app/auth/register",
+                   url: "https://boks-server.vercel.app/auth/register",
                    dataType: "json",
                    data: { ...values },
                    timeout: 30000,
